package com.oop_task.values

object NonNumericValues {
    const val GAME_MESSAGE_PREFIX: String = "[GAME MESSAGE]"
    const val SYSTEM_MESSAGE_PREFIX: String = "[SYSTEM MESSAGE]"

    const val BASE_CREATURE_NAME: String = "generic creature"
    const val BASE_PLAYER_NAME: String = "player"
    const val BASE_MONSTER_NAME: String = "monster"
}