package com.oop_task.values

object NumericValues {
    const val ATTACK_DICE_SIDES: Int = 6
    const val ATTACK_POINTS_MIN: Int = 1
    const val ATTACK_POINTS_MAX: Int = 30
    const val DEFENCE_POINTS_MIN: Int = 1
    const val DEFENCE_POINTS_MAX: Int = 30

    const val DEFAULT_DICE_SIDES: Int = 6

    const val BASE_CREATURE_MAX_HEALTH: Int = 1
    const val BASE_CREATURE_HEALTH: Int = 1
    const val BASE_CREATURE_ATTACK: Int = 1
    const val BASE_CREATURE_DEFENCE: Int = 1
    const val BASE_CREATURE_DAMAGE_INTRANGE_START: Int = 0
    const val BASE_CREATURE_DAMAGE_INTRANGE_END: Int = 0
}